    instruction is emitted in the prologue of functions using stringops.
    Closes: #469568.
  * debian/rules.d/build.mk: disable testsuite on ARM machines running a
    2.6.21 to 2.6.24 kernel.
  * Replace any/submitted-gcc-4.3.diff by any/cvs-gcc-4.3.diff.
  * debhelper.in/libc.preinst, debhelper.in/libc.postinst: remove support for
    upgrade from Potato, and misc fixes.

  [ Samuel Thibault ]
  * patches/hurd-i386/cvs-blocked-exceptions.diff: new patch to dump
    core when a blocked exception arises.
  * patches/hurd-i386/cvs-df.diff: new patch to clear DF for signal
    handlers (Closes: #470021).
  * patches/hurd-i386/local-gcc-4.1-init-first.diff: update and actually
    apply.
  * patches/hurd-i386/submitted-mig-init.diff: new patch to fix uninitialized
    local variables.

 -- Aurelien Jarno <aurel32@debian.org>  Sun, 16 Mar 2008 16:52:46 +0100

glibc (2.7-9) unstable; urgency=low

  * patches/any/local-ldso-disable-hwcap.diff: revert previous changes
    as they break etch -> lenny upgrades.  Closes: #465753.
  * kfreebsd/local-sysdeps.diff: update to revision 2137 (from glibc-bsd).
  * any/submitted-link-local_resolver.diff: kernel 2.6.24 is out, don't wait
    indefinitely for upstream. This patch from Pierre Ynard adds support for
    link-local addresses in /etc/resolv.conf.
  * Factorize NSS detection code:
    - debhelper.in/libc.preinst, debhelper.in/libc.postinst: move NSS code
      to...
    - script.in/nsscheck.sh: ... this file.
    - rules.d/debhelper.mk: Replace NSS_CHECK with code from
      script.in/nsscheck.sh.
  * debhelper.in/libc.preinst, debhelper.in/libc.templates: debconfize preinst
    script.
  * patches/localedata/locale-es_CR.diff: new patch to default to am/pm format
    for es_CR locale.  Closes: #466482.
  * control.in/main, sysdeps/amd64.mk, sysdeps/i386.mk,
    sysdeps/kfreebsd-amd64.mk, sysdeps/kfreebsd-i386.mk, sysdeps/sparc.mk : use
    gcc-4.3 on amd64, i386, kfreebsd-i386, kfreebsd-amd64 and sparc.