@@ -55,7 +55,7 @@ Description: GNU C Library: Precompiled locale data
  locale files take a lot of memory to be compiled.
 
 Package: nscd
-Architecture: alpha amd64 arm armeb armel i386 m32r m68k mips mipsel powerpc ppc64 sparc ia64 hppa s390 sh3 sh4 sh3eb sh4eb kfreebsd-i386 kfreebsd-amd64 
+Architecture: any
 Section: admin
 Priority: optional
 Depends: ${shlibs:Depends}
