@@ -55,7 +55,7 @@ Description: GNU C Library: Precompiled locale data
  locale files take a lot of memory to be compiled.
 
 Package: nscd
-Architecture: @threads_archs@
+Architecture: any
 Section: admin
 Priority: optional
 Depends: ${shlibs:Depends}
