@@ -33,6 +33,8 @@ glibc (2.7-10) unstable; urgency=low
   * Replace any/submitted-gcc-4.3.diff by any/cvs-gcc-4.3.diff.
   * debhelper.in/libc.preinst, debhelper.in/libc.postinst: remove support for
     upgrade from Potato, and misc fixes.
+  * control.in/main, rules.d/control.mk: remove @threads_arches@, as all
+    architectures now support threads.
 
   [ Samuel Thibault ]
   * patches/hurd-i386/cvs-blocked-exceptions.diff: new patch to dump
@@ -44,7 +46,7 @@ glibc (2.7-10) unstable; urgency=low
   * patches/hurd-i386/submitted-mig-init.diff: new patch to fix uninitialized
     local variables.
 
- -- Aurelien Jarno <aurel32@debian.org>  Sun, 16 Mar 2008 16:52:46 +0100
+ -- Aurelien Jarno <aurel32@debian.org>  Tue, 18 Mar 2008 20:51:55 +0100
 
 glibc (2.7-9) unstable; urgency=low
 
